I can save to output file, and match mov operations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   llvm:
     build: .
     volumes:
+      - ./tests:/var/tests
       - ./src:/var/llvm
       - ./obj:/var/Debug+Asserts
     command: ['/bin/bash']
